--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ before_install:
         sudo ln -s /usr/lib/i386-linux-gnu/mesa/libGL.so.1 /usr/lib/i386-linux-gnu/libGL.so;
         sudo ln -s /usr/lib/i386-linux-gnu/libX11.so.6 /usr/lib/i386-linux-gnu/libX11.so;
         sudo ln -s /usr/lib/i386-linux-gnu/libGLU.so.1 /usr/lib/i386-linux-gnu/libGLU.so;
+        sudo ln -s /usr/include/x86_64-linux-gnu/zconf.h /usr/include;
       elif [ "$COMPILER" == "MinGW64" ] || [ "$COMPILER" == "MinGW32" ]; then
         sudo apt-get -qq -y install mingw-w64 wine;
       else
@@ -42,8 +43,6 @@ before_install:
       elif [ "$AUDIO" == "SFML" ]; then
         sudo apt-get -qq -y install libsfml-dev;
       fi
-
-      #sudo ln -s /usr/include/x86_64-linux-gnu/zconf.h /usr/include;
     elif [ "$TRAVIS_OS_NAME" == "osx" ]; then
       brew upgrade gcc || brew install gcc || brew link --overwrite gcc;
     fi
