--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,65 @@
-sudo: false
+# competition for Thundercleese
+notifications:
+  irc: "chat.freenode.net#enigma"
+# disable the depth option for git allowing us to merge multiple prs simultaneously
+git:
+  depth: false
+# don't build "feature" branches
+branches:
+  only:
+    - "master"
+
+# install general dependencies used by more than one job
+before_install:
+  - |
+    set -ev # fail when any command returns non-zero
+
+    if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+      sudo apt-get -qq -y install build-essential zlib1g-dev libboost-dev libboost-iostreams-dev\
+        libboost-filesystem-dev libboost-program-options-dev libboost-system-dev;
+
+      if [ "$COMPILER" == "gcc32" ] || [ "$COMPILER" == "clang32" ]; then
+        sudo dpkg --add-architecture i386;
+        sudo apt-get -qq -y install libc++-dev:i386 libglu1-mesa:i386\
+          libc6:i386 libncurses5:i386 libstdc++6:i386 lib32z1-dev libx11-6:i386;
+
+        if [ "$COMPILER" == "gcc32" ]; then
+          sudo apt-get -qq -y install gcc-multilib g++-multilib;
+        fi
+
+        sudo ln -s /usr/lib/i386-linux-gnu/mesa/libGL.so.1 /usr/lib/i386-linux-gnu/libGL.so;
+        sudo ln -s /usr/lib/i386-linux-gnu/libX11.so.6 /usr/lib/i386-linux-gnu/libX11.so;
+        sudo ln -s /usr/lib/i386-linux-gnu/libGLU.so.1 /usr/lib/i386-linux-gnu/libGLU.so;
+        sudo ln -s /usr/include/x86_64-linux-gnu/zconf.h /usr/include;
+      elif [ "$COMPILER" == "MinGW64" ] || [ "$COMPILER" == "MinGW32" ]; then
+        sudo apt-get -qq -y install mingw-w64 wine;
+      else
+        sudo apt-get -qq -y install libc++-dev libglu1-mesa-dev;
+      fi
+
+      if [ "$AUDIO" == "OpenAL" ]; then
+        sudo apt-get -qq -y install libalure-dev libvorbisfile3 libvorbis-dev libdumb1-dev;
+      elif [ "$AUDIO" == "SFML" ]; then
+        sudo apt-get -qq -y install libsfml-dev;
+      fi
+    elif [ "$TRAVIS_OS_NAME" == "osx" ]; then
+      brew upgrade gcc || brew install gcc || brew link --overwrite gcc;
+    fi
+
+# build JDI and the CLI
+install:
+  - chmod +x ./ci-build.sh
+  - make -j4
+  - make -j4 emake
+  - curl -L https://github.com/fundies/enigma-libs/files/1347135/enigma-libs.zip > enigma-libs.zip
+  - unzip enigma-libs.zip -d ENIGMAsystem/
+  - mv ENIGMAsystem/Install ENIGMAsystem/Additional
+
+# by default most of our jobs will be run on a linux instance
+os: linux
+dist: trusty
+compiler: gcc
+language: cpp
 
 env:
   global:
@@ -44,6 +105,33 @@ env:
     - COMPILER=MinGW64 PLATFORM=Win32 MODE=Run GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
     # The big ol' None test.
     - COMPILER=gcc PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
+matrix:
+  include:
+    # Widgets
+    - env: COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=GTK+ EXTENSIONS="None"
+      before_script: sudo apt-get -qq -y install libgtk2.0-dev
+    # GME (Note: requires an Audio system)
+    - env: COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=OpenAL COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="GME"
+      before_script: sudo apt-get -qq -y install libgme-dev
+    - env: COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=SFML COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="GME"
+      before_script: sudo apt-get -qq -y install libgme-dev
+    # Box2D
+    - env: COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="Box2DPhysics"
+      before_script: sudo apt-get -qq -y install libbox2d-dev
+    - env: COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="StudioPhysics"
+      before_script: sudo apt-get -qq -y install libbox2d-dev
+    # Bullet Physics
+    - env: COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="BulletDynamics"
+      before_script: sudo apt-get -qq -y install libbullet-dev
+    # OSX
+    - { os: osx, osx_image: xcode9.2,
+        env: COMPILER="clang" PLATFORM="None" MODE="Debug" GRAPHICS="None" AUDIO="None" COLLISION="None" NETWORK="None" WIDGETS="None" EXTENSIONS="None" }
+    - { os: osx, osx_image: xcode9.2,
+        env: COMPILER="gcc" PLATFORM="None" MODE="Debug" GRAPHICS="None" AUDIO="None" COLLISION="None" NETWORK="None" WIDGETS="None" EXTENSIONS="None" }
+  # don't wait for OSX
+  fast_finish: true
+  allow_failures:
+    - os: osx
 
 script:
   - ./ci-build.sh
