--- a/.travis.yml
+++ b/.travis.yml
@@ -125,9 +125,9 @@ matrix:
       before_script: sudo apt-get -qq -y install libbullet-dev
     # OSX
     - { os: osx, osx_image: xcode9.2,
-        env: COMPILER="clang" PLATFORM="None" MODE="Debug" GRAPHICS="None" AUDIO="None" COLLISION="None" NETWORK="None" WIDGETS="None" EXTENSIONS="None" }
+        env: COMPILER=clang PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS=None }
     - { os: osx, osx_image: xcode9.2,
-        env: COMPILER="gcc" PLATFORM="None" MODE="Debug" GRAPHICS="None" AUDIO="None" COLLISION="None" NETWORK="None" WIDGETS="None" EXTENSIONS="None" }
+        env: COMPILER=gcc PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS=None }
   # don't wait for OSX
   fast_finish: true
   allow_failures:
