--- a/.travis.yml
+++ b/.travis.yml
@@ -124,10 +124,11 @@ matrix:
     - env: COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="BulletDynamics"
       before_script: sudo apt-get -qq -y install libbullet-dev
     # OSX
-    - { os: osx, osx_image: xcode9.2,
-        env: COMPILER=clang PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None" }
-    - { os: osx, osx_image: xcode9.2,
-        env: COMPILER=gcc PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None" }
+    - os: osx
+      osx_image: xcode9.2
+      matrix:
+        - COMPILER=clang PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS=None
+        - COMPILER=gcc PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS=None
   # don't wait for OSX
   fast_finish: true
   allow_failures:
