--- a/.travis.yml
+++ b/.travis.yml
@@ -105,11 +105,6 @@ env:
     - COMPILER=MinGW64 PLATFORM=Win32 MODE=Run GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
     # The big ol' None test.
     - COMPILER=gcc PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
-    # OSX
-    - os: osx
-      osx_image: xcode9.2
-    - COMPILER=clang PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS=None
-    - COMPILER=gcc PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS=None
 matrix:
   include:
     # Widgets
@@ -132,6 +127,15 @@ matrix:
   fast_finish: true
   allow_failures:
     - os: osx
+
+# OSX
+jobs:
+  include:
+    - stage: OSX
+      os: osx
+      osx_image: xcode9.2
+    - env: COMPILER=clang PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS=None
+    - env: COMPILER=gcc PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS=None
 
 script:
   - ./ci-build.sh
