--- a/.travis.yml
+++ b/.travis.yml
@@ -123,20 +123,15 @@ matrix:
     # Bullet Physics
     - env: COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="BulletDynamics"
       before_script: sudo apt-get -qq -y install libbullet-dev
+    # OSX
+    - { os: osx, osx_image: xcode9.2,
+        env: COMPILER=clang PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None" }
+    - { os: osx, osx_image: xcode9.2,
+        env: COMPILER=gcc PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None" }
   # don't wait for OSX
   fast_finish: true
   allow_failures:
     - os: osx
-
-# OSX
-jobs:
-  include:
-    - stage: OSX
-      os: osx
-      osx_image: xcode9.2
-      env:
-        - COMPILER=clang PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS=None
-        - COMPILER=gcc PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS=None
 
 script:
   - ./ci-build.sh
