--- a/appveyor.yml
+++ b/appveyor.yml
@@ -55,7 +55,7 @@ environment:
 install:
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\local\bin;c:\msys64\usr\bin;%PATH%
   - C:/msys64/mingw64.exe
-  - pacman --noconfirm -S mingw-w64-x86_64-boost %PACKAGES%
+  - C:/msys64/usr/bin/pacman --noconfirm -S mingw-w64-x86_64-boost %PACKAGES%
   - gcc -v
   - ps: |
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
