--- a/appveyor.yml
+++ b/appveyor.yml
@@ -62,7 +62,7 @@ install:
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
         # use our first job to build JDI and the CLI
         C:/msys64/usr/bin/bash.exe -lc "export TERM='ansi'; export GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01';
-        cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4 -fdiagnostics-color; make -j 4 emake"
+        cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4; make -j 4 emake"
 
         # create a daemon PowerShell "job" (not the same as an AppVeyor build job) to zip and upload
         # the blobs artifact while we start building the engine
