--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
     set -eo pipefail
 
     if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-      sudo add-apt-repository ppa:maarten-fonville/protobuf
+      sudo add-apt-repository -y ppa:maarten-fonville/protobuf;
       sudo apt-get -qq -y install build-essential zlib1g-dev libboost-dev libboost-iostreams-dev\
         libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libpugixml-dev\
         libprotobuf-dev protobuf-compiler;
