--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,10 @@ before_install:
 
     if [ "$TRAVIS_OS_NAME" == "linux" ]; then
       sudo add-apt-repository -y ppa:maarten-fonville/protobuf;
+      sudo apt-get update;
       sudo apt-get -qq -y install build-essential zlib1g-dev libboost-dev libboost-iostreams-dev\
         libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libpugixml-dev\
-        libprotobuf-dev protobuf-compiler;
+        libprotobuf-dev=3.4.1-0~maarten0 protobuf-compiler=3.4.1-0~maarten0;
 
       if [ "$COMPILER" == "gcc32" ] || [ "$COMPILER" == "clang32" ]; then
         sudo dpkg --add-architecture i386;
