--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
       sudo apt-get update;
       sudo apt-get -qq -y install build-essential zlib1g-dev libboost-dev libboost-iostreams-dev\
         libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libpugixml-dev\
-        libprotobuf-dev=3.4.1-0~maarten0 protobuf-compiler=3.4.1-0~maarten0;
+        libprotobuf-dev protobuf-compiler;
 
       if [ "$COMPILER" == "gcc32" ] || [ "$COMPILER" == "clang32" ]; then
         sudo dpkg --add-architecture i386;
