possible work around

--- a/CommandLine/emake/Makefile
+++ b/CommandLine/emake/Makefile
@@ -16,7 +16,7 @@ EXTRA_SRC_DIR := ../../CompilerSource
 
 PROTO_DIR := ../protos
 CXXFLAGS  := -I$(SRC_DIR) -I$(EXTRA_SRC_DIR) -I../libGMX -I$(PROTO_DIR) -I$(PROTO_DIR)/codegen -std=c++11 -Wall -Wextra -Wpedantic -g
-LDFLAGS   := $(OS_LIBS) -L../libGMX -lGMX -L/mingw64/lib/pugixml-1.8/ -lpugixml -L../protos -lProtocols -lprotobuf
+LDFLAGS   := $(OS_LIBS) -L../libGMX -lGMX -L/mingw64/lib/pugixml-1.8/ -lpugixml -L../../ -lProtocols -lprotobuf
 
 EXTRA_OBJS := $(patsubst $(EXTRA_SRC_DIR)/%, $(OBJ_DIR)/Extra/%, $(patsubst %.cpp, %.o, $(EXTRA_SOURCES)))
 
@@ -32,6 +32,7 @@ $(BINARY): $(OBJECTS) $(EXTRA_OBJS)
 .PHONY: all clean obj_dirs
 
 all: $(BINARY)
+
 clean:
 	rm -rf $(BINARY) $(OBJ_DIR)
 
