--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /MacOS/build/Release/EnigmaXcode.app/Contents/Info.plist
 /MacOS/build/Release/EnigmaXcode.app/Contents/Resources/*
 /definitions.h
+/coverage_*.info
+
 
 /CommandLine/protos/codegen
 
