--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ before_install:
       if [ "$TEST_HARNESS" == true ]; then
         sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
         sudo apt-get update;
-        sudo apt-get -qq -y install cmake libgtest-dev xvfb wmctrl xdotool xfwm4 lcov gcc-7 g++-7 cpp-7;
+        sudo apt-get -qq -y install cmake libgtest-dev xvfb wmctrl xdotool xfwm4 lcov gcc-7 g++-7 cpp-7 pulseaudio;
         sudo update-alternatives --remove-all cpp;
         sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 \
                     15 \
