--- a/CommandLine/protos/Makefile
+++ b/CommandLine/protos/Makefile
@@ -15,9 +15,9 @@ OBJ_DIR := .eobjs
 
 rwildcard=$(wildcard $1/$2) $(foreach d,$(wildcard $1/*),$(call rwildcard,$d,$2))
 PROTOS := $(call rwildcard,$(SRC_DIR),*.proto)
-PROTO_OUT := $(patsubst $(SRC_DIR)/%, $(PROTO_DIR)/%, $(patsubst %.proto, %.pb, $(PROTOS)))
+PROTO_OUT := $(patsubst $(SRC_DIR)/%, $(PROTO_DIR)/%, $(patsubst %.proto, %.pb.h, $(PROTOS)))
 
-$(PROTO_DIR)/%.pb: $(SRC_DIR)/%.proto
+$(PROTO_DIR)/%.pb.h: $(SRC_DIR)/%.proto
 	protoc -I=. -I=/usr/include --cpp_out=$(PROTO_DIR) $<
 
 SOURCES := $(call rwildcard,$(SRC_DIR),*.cpp)
