--- a/CommandLine/libGMX/Makefile
+++ b/CommandLine/libGMX/Makefile
@@ -10,8 +10,8 @@ rwildcard=$(wildcard $1/$2) $(foreach d,$(wildcard $1/*),$(call rwildcard,$d,$2)
 SOURCES := $(call rwildcard,$(SRC_DIR),*.cpp)
 OBJECTS := $(patsubst $(SRC_DIR)/%, $(OBJ_DIR)/%, $(patsubst %.cpp, %.o, $(SOURCES)))
 
-OBJDIRS = $(sort $(OBJ_DIR) $(dir $(PROTO_OBJECTS)) $(dir $(OBJECTS)))
-DEPENDS = $(PROTO_OBJECTS:.o=.d) $(OBJECTS:.o=.d)
+OBJDIRS = $(sort $(OBJ_DIR) $(dir $(OBJECTS)))
+DEPENDS = $(OBJECTS:.o=.d)
 
 lib:
 	$(MAKE) $(LIBRARY)
@@ -33,3 +33,7 @@ $(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp | obj_dirs
 	$(CXX) $(CXXFLAGS) -MMD -c -o $@ $<
 
 .PHONY: lib clean obj_dirs
+
+# Include rules for known (previously-built) files
+-include $(DEPENDS)
+.SUFFIXES:
