--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,15 @@ branches:
 
 before_install:
   - |
+    # install general dependencies used by more than one job
     set -eo pipefail
 
     if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+      sudo add-apt-repository -y ppa:maarten-fonville/protobuf;
+      sudo apt-get update --option Acquire::Retries=100 --option Acquire::http::Timeout="60";
       sudo apt-get -qq -y install build-essential zlib1g-dev libboost-dev libboost-iostreams-dev\
-        libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libpugixml-dev;
+        libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libpugixml-dev\
+        libprotobuf-dev protobuf-compiler;
 
       if [ "$COMPILER" == "gcc32" ] || [ "$COMPILER" == "clang32" ]; then
         sudo dpkg --add-architecture i386;
@@ -59,16 +63,15 @@ before_install:
                     --slave   /usr/bin/gcc-ar gcc-ar /usr/bin/gcc-ar-7 \
                     --slave   /usr/bin/gcc-nm gcc-nm /usr/bin/gcc-nm-7 \
                     --slave   /usr/bin/gcc-ranlib gcc-ranlib /usr/bin/gcc-ranlib-7;
+        pushd /usr/src/gtest;
+        sudo cmake CMakeLists.txt;
+        sudo make;
+        sudo cp *.a /usr/lib
+        popd
       fi
     elif [ "$TRAVIS_OS_NAME" == "osx" ]; then
       brew upgrade gcc || brew install gcc || brew link --overwrite gcc;
       brew install protobuf pugixml
-    fi
-    
-    if [ "$TRAVIS_OS_NAME" == "linux" ]; then      
-      latest=$(curl --silent "https://api.github.com/repos/RemoveRusky/grpc-trusy/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/');
-      curl -L -o google-trash.deb "https://github.com/RemoveRusky/grpc-trusy/releases/download/$latest/google-trash.deb";
-      sudo dpkg -i --force-all google-trash.deb;
     fi
 
 # build JDI and the CLI
