only define the windows feature set for server if its enabled

--- a/CommandLine/emake/Makefile
+++ b/CommandLine/emake/Makefile
@@ -15,7 +15,7 @@ EXTRA_SOURCES := ../../CompilerSource/settings-parse/eyaml.cpp ../../CompilerSou
 EXTRA_SRC_DIR := ../../CompilerSource
 
 PROTO_DIR := ../protos
-CXXFLAGS  := -I$(SRC_DIR) -I$(EXTRA_SRC_DIR) -I../libEGM -I../libEGM -I$(PROTO_DIR) -I$(PROTO_DIR)/codegen -std=c++11 -Wall -Wextra -Wpedantic -g -D_WIN32_WINNT=0x0600
+CXXFLAGS  := -I$(SRC_DIR) -I$(EXTRA_SRC_DIR) -I../libEGM -I../libEGM -I$(PROTO_DIR) -I$(PROTO_DIR)/codegen -std=c++11 -Wall -Wextra -Wpedantic -g
 LDFLAGS   := $(OS_LIBS) -L/mingw64/lib/pugixml-1.8/ -lpugixml -L../../ -lProtocols -lEGM -lprotobuf
 
 EXTRA_OBJS := $(patsubst $(EXTRA_SRC_DIR)/%, $(OBJ_DIR)/Extra/%, $(patsubst %.cpp, %.o, $(EXTRA_SOURCES)))
