--- a/CompilerSource/Makefile
+++ b/CompilerSource/Makefile
@@ -28,11 +28,10 @@ endif
 # options #
 ###########
 
-SHARED_SOURCES := ../shared
 CXX := g++
-CXXFLAGS += -std=c++11 -Wall -O3 -g -I./JDI/src -I../CommandLine/protos/codegen/ -I$(SHARED_SOURCES)/lodepng
+CXXFLAGS += -std=c++11 -Wall -O3 -g -I./JDI/src
 LDFLAGS += -shared -O3 -g
-LDLIBS += -L$(SHARED_SOURCES)/lodepng -llodepng -L../ -lProtocols -lprotobuf -lz
+LDLIBS += -lz
 
 # This implements a recursive wildcard allowing us to iterate in subdirs
 rwildcard=$(wildcard $1$2) $(foreach d,$(wildcard $1*),$(call rwildcard,$d/,$2))
