--- a/ENIGMAsystem/SHELL/Widget_Systems/TinyFileDialogs/Makefile
+++ b/ENIGMAsystem/SHELL/Widget_Systems/TinyFileDialogs/Makefile
@@ -1,2 +1,2 @@
-include ../../../../shared/TFD/Makefile
+include ../../../../shared/tinyfiledialogs/Makefile
 SOURCES += $(wildcard Widget_Systems/TinyFileDialogs/*.cpp)
