--- a/shared/tinyfiledialogs/Makefile
+++ b/shared/tinyfiledialogs/Makefile
@@ -1,2 +1,2 @@
-HEADERS += $(SHARED_SRC_DIR)/tinyfiledialogs/tinyfiledialogs.h
-SOURCES += $(SHARED_SRC_DIR)/tinyfiledialogs/tinyfiledialogs.cpp
+# SHARED_INCLUDES += tinyfiledialogs (Best to just let them include tinyfiledialogs/tinyfiledialogs.h)
+SHARED_SOURCES := $(SHARED_SOURCES) $(addprefix tinyfiledialogs/,$(call relative_wildcard,*.cpp))
